--- a/css/movies_app_utilities.css
+++ b/css/movies_app_utilities.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Box sizing rules and reset*/
 *,
 *::before,
@@ -28,6 +30,11 @@ body {
 }
 P, li {
     font-size: 1.6rem;
+    font-family: 'Poppins', sans-serif;
+}
+button{
+    font-size: 1.6rem;
+    font-family: 'Poppins', sans-serif;
 }
 img,
 picture {
@@ -52,4 +59,8 @@ picture {
 /*Custom Properties*/
 :root{
     --main-purple: rgb(118,113,240);
+    --purple2: rgba(145, 140, 241, 0.8);
+    --soft-white: rgba(255, 255, 255, 0.49);
+    --dark-soft-white:rgba(255, 255, 255, 0.8);
+
 }
