--- a/css/nav.css
+++ b/css/nav.css
@@ -1,11 +1,12 @@
 nav{
     height: 6rem;
     width: 100vw;
-    background-color: #131418;
+    background-color: var(--purple2);
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
     display: flex;
     position: fixed;
     z-index: 10;
+    top: 0;
 }
 
 /*Styling logo*/
