--- a/css/nav.css
+++ b/css/nav.css
@@ -1,13 +1,24 @@
+.nav-container{
+    width: 90%;
+    max-width:1300px ;
+    margin: 0 auto;
+}
 nav{
     height: 6rem;
     width: 100vw;
+    /*width: 90%;*/
     /*background-color: var(--purple2);*/
-    background-color: rgba(145, 140, 241, 0.9);
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    /*max-width:1300px ;*/
     display: flex;
     position: fixed;
     z-index: 10;
     top: 0;
+    left: 0;
+
+    border-bottom-right-radius:15px;
+    border-bottom-left-radius: 15px;
 }
 
 /*Styling logo*/
@@ -24,7 +35,7 @@ nav{
     margin-right: 5rem;
 }
 .fa-video{
-color: white;
+color: var(--black);
     font-size: 2.5rem;
 }
 
@@ -41,7 +52,8 @@ color: white;
 .nav-links li a{
     text-decoration: none;
     margin: 0 0.7vw;
-    color: var(--dark-soft-white);
+    color: var(--soft-white);
+    font-weight: 500;
 }
 /*.nav-links li a:hover {*/
 /*    color: var(--purple2);*/
@@ -54,7 +66,7 @@ color: white;
     display: block;
     height: 3px;
     width: 0%;
-    background-color: var(--dark-soft-white);
+    background-color: var(--soft-white);
     position: absolute;
     transition: all ease-in-out 250ms;
     margin: 0 0 0 10%;
@@ -62,54 +74,20 @@ color: white;
 .nav-links li a:hover::before{
     width: 80%;
 }
-
-/*Styling Buttons*/
-/*.login-button{*/
-/*    background-color: transparent;*/
-/*    border: 1.5px solid #f2f5f7;*/
-/*    border-radius: 2em;*/
-/*    padding: 0.6rem 0.8rem;*/
-/*    margin-left: 2vw;*/
-/*    font-size: 1rem;*/
-/*    cursor: pointer;*/
-
-/*}*/
-/*.login-button:hover {*/
-/*    color: #131418;*/
-/*    background-color: #f2f5f7;*/
-/*    border:1.5px solid #f2f5f7;*/
-/*    transition: all ease-in-out 350ms;*/
-/*}*/
-/*.join-button{*/
-/*    color: #131418;*/
-/*    background-color: #61DAFB;*/
-/*    border: 1.5px solid #61DAFB;*/
-/*    border-radius: 2em;*/
-/*    padding: 0.6rem 0.8rem;*/
-/*    font-size: 1rem;*/
-/*    cursor: pointer;*/
-/*}*/
-/*.join-button:hover {*/
-/*    color: #f2f5f7;*/
-/*    background-color: transparent;*/
-/*    border:1.5px solid #f2f5f7;*/
-/*    transition: all ease-in-out 350ms;*/
-/*}*/
-
 /*Styling Hamburger Icon*/
 .hamburger div{
     width: 30px;
     height:3px;
-    background: var(--dark-soft-white);
+    background: var(--main-purple);
     margin: 5px;
     transition: all 0.3s ease;
 }
-.hamburger{
-    display: none;
-}
+/*.hamburger{*/
+/*    display: none;*/
+/*}*/
 
 /*Stying for small screens*/
-@media screen and (max-width: 800px){
+@media screen and (min-width: 200px){
     nav{
         position: fixed;
         z-index: 3;
@@ -135,7 +113,7 @@ color: white;
         pointer-events: none;
     }
     .nav-links.open{
-        clip-path: circle(1000px at 100%);
+        clip-path: circle(3000px at 100%);
         pointer-events: all;
     }
     .nav-links{
