--- a/css/form_area.css
+++ b/css/form_area.css
@@ -1,24 +1,30 @@
+/*main{*/
+/*    position: relative;*/
+/*}*/
 .form-area{
     background-color: var(--main-purple);
     /*background-color: red;*/
-    width: 95vw;
+    width: 100%;
     height: 300px;
 /*margin-top: 7rem;*/
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 15px;
-    margin: 6.5rem auto;
+    margin: 6.5rem 0;
+    /*position: relative;*/
 }
 .search-container{
     position: relative;
-    /*left: 50%;*/
-    /*top: 50%;*/
-    /*transform: translate(-50%, -50%);*/
-    /*width: ;*/
     width: 80%;
+    border: 2px solid red;
 }
-
+.search-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
 /*TODO: search form*/
 #form-area-search{
     width: 100%;
@@ -34,12 +40,7 @@
 input::placeholder{
     color: var(--soft-white);
 }
-.search-wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 4.5rem;
-}
+
 .fa-filter{
     color: var(--dark-soft-white);
     font-size: 2rem;
@@ -50,7 +51,11 @@ input::placeholder{
     display: flex;
     align-items: center;
     justify-content: start;
+    flex-wrap: wrap;
     gap: 15px;
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
 }
 .btn{
     width: 140px;
