--- a/css/movies_app_utilities.css
+++ b/css/movies_app_utilities.css
@@ -32,7 +32,7 @@ P, li {
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
 }
-button{
+button, h2, label{
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
 }
@@ -62,5 +62,12 @@ picture {
     --purple2: rgba(145, 140, 241, 0.8);
     --soft-white: rgba(255, 255, 255, 0.49);
     --dark-soft-white:rgba(255, 255, 255, 0.8);
+    --black:rgb(54,54,54);
 
+}
+
+.page-container{
+    width: 90%;
+    max-width:1300px ;
+    margin: 0 auto;
 }
