--- a/css/modals.css
+++ b/css/modals.css
@@ -1,11 +1,17 @@
 /*TODO: ADD MODAL EDIT*/
-.add-movie-modal,.edit-movie-modal{
+.add-movie-modal,.edit-movie-modal, .movie-info-modal{
     width: 100%;
     max-width:550px;
     border-radius: 15px;
-border: black 2px solid;
+border: rgba(61, 22, 96, 0.5) 1px solid;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
-
+.add-movie-modal::backdrop,.edit-movie-modal::backdrop,.movie-info-modal::backdrop{
+    background-color: rgba(16, 0, 16, 0.49);
+}
 .add-movie-modal h2,.edit-movie-modal h2{
     height: 80px;
     background-color: var(--purple2);
@@ -42,3 +48,12 @@ border-top-left-radius: 15px;
     letter-spacing: .046rem;
 }
 
+.btn-group{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 25px;
+
+}
+
+/*TODO: movie-info-modal*/
