--- a/css/scroller.css
+++ b/css/scroller.css
@@ -1,27 +1,51 @@
-.scroller {
-    padding: 1rem;
-    border-radius: 8px;
-    max-width: 100%;
-    width: 85vw;
-    margin: auto;
-    /*overflow-x: auto;*/
-    /*overscroll-behavior: contain;*/
+.media-scroller{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 53%;
+    gap: 11px;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    padding: 10px;
 }
-.images-container {
-    display: flex;
-    gap: 24px;
-    /*overflow-x: auto;*/
-    padding-bottom: 30px;
-    /*width: 100%;*/
+.media-element{
+    display: grid;
+    grid-template-rows: min-content;
+    gap: 10px;
+    position: relative;
+    /*padding-right: 10px;*/
+    /*padding: 20px;*/
 }
-.images-container img {
+.media-element > img{
+    /*padding: 20px;*/
+border-radius: 10px;
+    width: 100%;
+    /*min-width: 175px;*/
+
+    aspect-ratio: 16 / 9;
     object-fit: cover;
-    height: 281px;
-    width: 500px;
-    transition: height 350ms ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-.images-container img:hover {
-    /*object-fit: cover;*/
-    height: 310px;
-    width: 500px;
+.snaps-inline{
+    scroll-snap-type: inline mandatory;
+scroll-padding-inline: 1rem;
+
+}
+.snaps-inline > *{
+    scroll-snap-align: start;
+}
+.fa-circle-xmark{
+    font-size: 2.5rem;
+position: absolute;
+    color: var(--purple2);
+    right: 6px;
+    top: 6px;
+    filter: drop-shadow(0 0 5px #333);
+}
+.movie-management-btns{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    font-size: 1.8rem;
+    width: 100%;
+    gap: 15px;
 }
