--- a/css/modals.css
+++ b/css/modals.css
@@ -53,7 +53,6 @@ border-top-left-radius: 15px;
     align-items: center;
     justify-content: end;
     gap: 25px;
-
 }
 
 /*TODO: movie-info-modal*/
@@ -64,16 +63,38 @@ border-top-left-radius: 15px;
     overflow: hidden;
 
 }
-
+.movie-info-element{
+    position: relative;
+}
 .movie-description-modal h2{
     font-size: 2.5rem;
 }
 .movie-description-plot,
 .movie-description-data {
-    font-size: 1.2rem;
+    font-size: 1.35rem;
     letter-spacing: 0.04rem;
-    font-weight: 300;
+    font-weight: 400;
+}
+.movie-description-plot{
+    margin-bottom: 2rem;
 }
 .movie-info-element-text{
     padding: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.gradient{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 65%;
+    background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.79) 100%);
+}
+.fa-xmark{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    font-size: 2.5rem;
 }
