--- a/css/nav.css
+++ b/css/nav.css
@@ -55,9 +55,9 @@ color: var(--black);
     color: var(--soft-white);
     font-weight: 500;
 }
-/*.nav-links li a:hover {*/
-/*    color: var(--purple2);*/
-/*}*/
+.nav-links li a:hover {
+    color: var(--dark-soft-white);
+}
 .nav-links li {
     position: relative;
 }
@@ -80,7 +80,7 @@ color: var(--black);
     height:3px;
     background: var(--main-purple);
     margin: 5px;
-    transition: all 0.3s ease;
+    transition: all 0.7s ease;
 }
 /*.hamburger{*/
 /*    display: none;*/
@@ -100,7 +100,7 @@ color: var(--black);
         top: 50%;
         transform: translate(-5%, -50%);
         z-index: 2;
-        transition: all 0.7s ease;
+        transition: all 0.4s ease;
     }
     .nav-links{
         position: fixed;
@@ -109,7 +109,7 @@ color: var(--black);
         width: 100%;
         flex-direction: column;
         clip-path: circle(50px at 90% -20%);
-        transition: all 1s ease-out;
+        transition: all 1.5s ease-out;
         pointer-events: none;
     }
     .nav-links.open{
@@ -159,7 +159,7 @@ color: var(--black);
     transform: rotate(-45deg) translate(-5px,6px);
 }
 .toggle .line2{
-    transition: all 0.7s ease;
+    transition: all 0.7s ease-out;
     width:0;
 }
 .toggle .line3{
