--- a/css/form_area.css
+++ b/css/form_area.css
@@ -5,18 +5,25 @@
     background-color: var(--main-purple);
     /*background-color: red;*/
     width: 100%;
-    height: 300px;
+    /**/
 /*margin-top: 7rem;*/
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     border-radius: 15px;
     margin: 6.5rem 0;
     /*position: relative;*/
 }
+.movie-search-h1{
+    font-size: 4.2rem;
+    color: var(--dark-soft-white);
+    text-transform: uppercase;
+    margin-bottom: 3rem;
+}
 .search-container{
     position: relative;
     width: 80%;
+
     /*border: 2px solid red;*/
 }
 .search-wrapper{
@@ -55,7 +62,8 @@ input::placeholder{
     gap: 15px;
     width: 100%;
     max-width: 500px;
-    margin: auto;
+
+    margin: 0 auto 4rem auto;
 }
 .btn{
     width: 140px;
