--- a/css/modals.css
+++ b/css/modals.css
@@ -1,13 +1,14 @@
 /*TODO: ADD MODAL EDIT*/
-.add-movie-modal,.edit-movie-modal, .movie-description-modal{
-    width: 100%;
+.edit-movie-modal, .movie-description-modal{
+    width: 90%;
+    margin: 0 auto;
     max-width:550px;
     border-radius: 15px;
 border: rgba(61, 22, 96, 0.5) 1px solid;
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    /*top: 0%;*/
+    /*left: 50%;*/
+    transform: translateY(-110%);
 }
 .add-movie-modal::backdrop,.edit-movie-modal::backdrop,.movie-description-modal::backdrop{
     background-color: rgba(16, 0, 16, 0.49);
