--- a/css/form_area.css
+++ b/css/form_area.css
@@ -13,6 +13,7 @@
     border-radius: 15px;
     margin: 6.5rem 0;
     /*position: relative;*/
+    padding-bottom: 2rem;
 }
 .movie-search-h1{
     font-size: 4.2rem;
