--- a/css/scroller.css
+++ b/css/scroller.css
@@ -6,13 +6,15 @@
     overflow-x: auto;
     overscroll-behavior: contain;
     padding: 10px;
-    width: 100%;}
+    width: 100%;
 
-.media-scroller{
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    /*scrollbar-width: none; !* for Firefox *!*/
-    overflow-y: scroll;
 }
+
+/*.media-scroller{*/
+/*    -ms-overflow-style: none; !* for Internet Explorer, Edge *!*/
+/*    !*scrollbar-width: none; !* for Firefox *!*!*/
+/*    overflow-y: scroll;*/
+/*}*/
 
 .media-scroller::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
