--- a/css/movies_app_utilities.css
+++ b/css/movies_app_utilities.css
@@ -82,7 +82,9 @@ main{
     background: #efefef;
     transition: background .5s;
 }
-/*.container img {*/
-/*    display: table-cell;*/
-/*    vertical-align: middle;*/
-/*}*/
+.loader{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
