--- a/css/form_area.css
+++ b/css/form_area.css
@@ -20,7 +20,7 @@
     font-size: 3.2rem;
     color: var(--dark-soft-white);
     text-transform: uppercase;
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
 }
 .search-container{
     position: relative;
@@ -32,17 +32,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 2rem;
+    /*margin-bottom: 2rem;*/
 }
 .search-box-btn-wrapper{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     flex: 1;
     flex-wrap: wrap;
-    min-width: 320px;
+    min-width: 240px;
 }
 .svg-girls{
     display: none;
@@ -82,7 +82,7 @@ input::placeholder{
     width: 100%;
     max-width: 500px;
 
-    margin: 0 auto 4rem auto;
+    margin: 3rem auto 4rem auto;
 }
 .btn{
     width: 140px;
@@ -90,8 +90,6 @@ input::placeholder{
     border-radius: 25px;
     background-color: var(--purple2);
     color: var(--dark-soft-white);
-    /*font-size: 1.6rem;*/
-    /*font-weight: 500;*/
 }
 
 
@@ -104,7 +102,7 @@ input::placeholder{
         font-weight: 300;
     }
     .movie-output-control{
-        margin: 0 auto 5.2rem auto;
+        margin: 3.5rem auto 5.2rem auto;
     }
     .search-container{
         width: 90%;
@@ -122,7 +120,7 @@ input::placeholder{
         }
     }
     #popcorn2{
-        animation: popcorn2 1.6s .5ms ease-in-out infinite alternate;
+        animation: popcorn2 1.6s .2ms ease-in-out infinite alternate;
     }
     @keyframes popcorn2 {
         from{transform: translateY(0);}
@@ -131,58 +129,58 @@ input::placeholder{
         }
     }
     #Vector_107{
-        animation: Vector_107 2s .6ms ease-in-out infinite alternate;
+        animation: Vector_107 1.7s .3ms ease-in-out infinite alternate;
     }
     @keyframes Vector_107 {
         from{
-            transform: translateY(0) rotate(0deg);
+            transform: translateY(0);
         }
         to{
-            transform: translateY(15px) rotate(2deg);
+            transform: translateY(12px) ;
         }
     }
     #Vector_108, #popcorn4{
-        animation: Vector_108 2.2s .8ms ease-in-out infinite alternate;
+        animation: Vector_108 1.5s .2ms ease-in-out infinite alternate;
     }
     @keyframes Vector_108 {
         from{
-            transform: translateY(0) rotate(0deg);
+            transform: translateY(0);
         }
         to{
-            transform: translateY(15px) rotate(2deg);
+            transform: translateY(12px);
         }
     }
     #popcorn5{
-        animation: popcorn5 1.9s .8ms ease-in-out infinite alternate;
+        animation: popcorn5 1.6s .3ms ease-in-out infinite alternate;
     }
     @keyframes popcorn5 {
         from{
-            transform: translateY(0) rotate(0deg);
+            transform: translateY(0);
         }
         to{
-            transform: translateY(-3px) rotate(-7deg);
+            transform: translateY(16px) ;
         }
     }
     #popcorn6{
-        animation: popcorn6 1.9s .8ms ease-in-out infinite alternate;
+        animation: popcorn6 1.7s .2ms ease-in-out infinite alternate;
     }
     @keyframes popcorn6 {
         from{
-            transform: translateY(0) rotate(0deg);
+            transform: translateY(0);
         }
         to{
-            transform: translateY(-5px) rotate(-5deg);
+            transform: translateY(-8px);
         }
     }
     #popcorn7{
-        animation: popcorn7 1.9s .5ms ease-in-out infinite alternate;
+        animation: popcorn7 1.5s .3ms ease-in-out infinite alternate;
     }
     @keyframes popcorn7 {
         from{
-            transform: translateY(0) rotate(0deg);
+            transform: translateY(0);
         }
         to{
-            transform: translateY(-5px) rotate(-5deg);
+            transform: translateY(12px);
         }
     }
 }
