--- a/css/scroller.css
+++ b/css/scroller.css
@@ -43,7 +43,6 @@ border-radius: 10px;
 .snaps-inline{
     scroll-snap-type: inline mandatory;
 scroll-padding-inline: 1rem;
-
 }
 .snaps-inline > *{
     scroll-snap-align: start;
@@ -74,4 +73,11 @@ position: absolute;
     color: rgba(255, 255, 255, 0.61);
     text-transform: capitalize;
     /*font-weight: 500;*/
+}
+
+@media screen and (min-width: 750px) {
+    .media-scroller{
+        grid-auto-columns: 40%;
+
+    }
 }
