--- a/css/form_area.css
+++ b/css/form_area.css
@@ -107,8 +107,26 @@ input::placeholder{
     .search-container{
         width: 90%;
     }
+    .search-wrapper{
+        margin-bottom: 6rem;
+    }
+
+    #form-area-new, #form-area-search{
+        padding-left: 10px;
+        height: 50px;
+        font-size: 2.6rem;
+    }
     .svg-girls{
         display: block;
+    }
+    .open-add-movie-modal{
+        width: 140px;
+        height: 42px;
+        border-radius: 25px;
+        background-color: var(--purple2);
+        color: var(--dark-soft-white);
+        font-size: 1.8rem;
+        /*font-weight: 500;*/
     }
 #popcorn1{
     animation: popcorn1 1.5s ease-in-out infinite alternate;
