--- a/css/form_area.css
+++ b/css/form_area.css
@@ -97,9 +97,10 @@ input::placeholder{
 
 @media screen and (min-width: 750px) {
     .movie-search-h1 {
-        font-size: 5.2rem;
+        font-size: 7.2rem;
         margin-bottom: 5rem;
-        font-weight: 300;
+        font-weight: 800;
+        font-family: 'Mouse Memoirs', sans-serif;
     }
     .movie-output-control{
         margin: 3.5rem auto 5.2rem auto;
@@ -128,6 +129,7 @@ input::placeholder{
         font-size: 1.8rem;
         /*font-weight: 500;*/
     }
+/*    TODO: POPCORN GIRL ANIMATIONS*/
 #popcorn1{
     animation: popcorn1 1.5s ease-in-out infinite alternate;
 }
@@ -199,6 +201,46 @@ input::placeholder{
         }
         to{
             transform: translateY(12px);
+        }
+    }
+    /*right girl right hand*/
+    #Vector_99{
+        animation: Vector_99 2.5s .3ms ease-out infinite alternate;
+        transform-origin: left;
+        transform-box: fill-box;
+    }
+    @keyframes Vector_99 {
+        from{
+            transform: rotateZ(0);
+        }
+        to{
+            transform: rotate(10deg);
+        }
+    }
+    #Vector_40{
+        animation: Vector_40 2.5s .3ms ease-in-out infinite alternate;
+        transform-origin: right;
+        transform-box: fill-box;
+    }
+    @keyframes Vector_40 {
+        from{
+            transform: rotateZ(0);
+        }
+        to{
+            transform: rotate(15deg);
+        }
+    }
+    #Vector_39{
+        animation: Vector_39 2.5s .7ms ease-in-out infinite alternate;
+        transform-origin: left;
+        transform-box: fill-box;
+    }
+    @keyframes Vector_39 {
+        from{
+            transform: rotateZ(0);
+        }
+        to{
+            transform: rotate(15deg);
         }
     }
 }
