--- a/css/movies_app_utilities.css
+++ b/css/movies_app_utilities.css
@@ -29,7 +29,7 @@ body {
     overflow-x: hidden;
     position: relative;
 }
-P, li,button, h2, label,h1{
+P, li,button, h2, label,h1, span{
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
 }
@@ -87,4 +87,44 @@ main{
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
+}
+div.cursors div{
+    position: absolute;
+    top: 300px;
+    left: 300px;
+    width: 20px;
+    height: 20px;
+    /*border: 2px solid var(--dark-soft-white);*/
+    /*background-color: transparent;*/
+    background-color: var(--purple2);
+    border-radius: 50%;
+    /*able to still click with cursor*/
+    pointer-events: none;
+    z-index: 777777;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity .5s ease-in-out;
+}
+div.cursors div.visible{
+    opacity: 1;
+}
+div.cursors div span {
+position: absolute;
+    top: 0;
+    left: 30px;
+    width: 300px;
+    font-weight: 700;
+    font-size: 2.2rem;
+    line-height: 22px;
+    opacity: 0;
+    transition: opacity .5s ease-in-out;
+    text-shadow: 2px 2px black;
+}
+
+div.cursors div span.visible {
+    opacity: 1;
+}
+
+button:active{
+    transform: scale(.9);
 }
